--- a/index.html
+++ b/index.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life pulse</title>
-</head>
-<body>
-    <header>
-<nav>
-    
-</nav>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous" />
+  </head>
+  <body>
+    <header class="container-xl">
+      <nav class="navbar sticky-lg-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand fw-bolder text-danger" href="#">Life pulse</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
+              <li class="nav-item ms-3">
+                <a class="nav-link fw-bold active" aria-current="page" href="#"
+                  >Home</a
+                >
+              </li>
+
+              <li class="nav-item ms-3">
+                <a class="nav-link fw-bold" href="#">About</a>
+              </li>
+              <li class="nav-item ms-3">
+                <a class="nav-link fw-bold" href="#">Blog</a>
+              </li>
+            </ul>
+
+            <button class="btn btn-outline-danger ms-3" type="submit">
+              Login
+            </button>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Hero -->
+      <div class="p-5 text-center banner bg-image rounded-3">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white">
+            <h1 class="mb-3">Website Age Checker</h1>
+            <div
+              class="d-flex align-items-center justify-content-center">
+              <input
+                class="rounded border-white py-2 px-5"
+                type="search"
+                name=""
+                id=""
+                placeholder="Enter your age" />
+              <button class="btn btn-outline-light rounded-end  btn p-2" href="#!" role="button">
+                Search
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Hero -->
     </header>
+
     <main></main>
     <footer></footer>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
